# music_file_enhancer

./: .gitignore  README.md  pyproject.toml
music_file_enchancer/: __main__.py  cli.py  standardize.py  utils.py
music_file_enchancer/extractors/: apple_music.py  extractors.py  shazam.py
