[tool.poetry]
name = "music_file_enchancer"
version = "0.1.0"
description = "CLI tool for enchancing mp3 files to industry standards"
authors = ["Arslan Amanov <aamanov829@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
eyed3 = "^0.9.7"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.23.0"
click = "^8.1.7"
bs4 = "^0.0.1"
requests = "^2.31.0"
cloudscraper = "^1.2.71"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
enchance_mp3 = "music_file_enchancer.cli:enchance_mp3_file"